Testing base64 image 2